--- a/publising_guide/html/include/index_list.html
+++ b/publising_guide/html/include/index_list.html
@@ -109,5 +109,8 @@
                 <li><a href="./menu_05.html#">퍼블리싱 리스트 레이아웃</a></li>
             </ul>
         </li>
+        <li>
+            <a href="./menu_06.html#menu_06_01">js 라이브러리</a>
+        </li>
     </ul>
 </div>
