--- a/publising_guide/css/style.css
+++ b/publising_guide/css/style.css
@@ -340,7 +340,8 @@ header .btn_menu a.on span:nth-child(3) {
     margin-left: 0;
 }
 .index > ul > li:nth-child(4),
-.index > ul > li:nth-child(5) {
+.index > ul > li:nth-child(5),
+.index > ul > li:nth-child(6) {
     margin-top: 20px;
 }
 .index > ul > li > ul > li {
@@ -533,7 +534,8 @@ details summary {
         width: 100%;
     }
     .index > ul > li:nth-child(4),
-    .index > ul > li:nth-child(5) {
+    .index > ul > li:nth-child(5),
+    .index > ul > li:nth-child(6) {
         margin-top: 10px;
     }
     .index > ul > li + li {
